# rise-up-app

./: .env  .gitignore  Cargo.toml  readme.md
resources/migrations/: V1__init.sql
resources/requests/: user_requests.http
src/: main.rs
src/error/: user_error.rs
src/handler/: user_handler.rs
src/models/: login_request.rs  mod.rs  submit_user_request.rs  user.rs
src/repository/: repository.rs  user_repository.rs
src/service/: user_service.rs
src/state/: app_state.rs
